# public/api-docs/models/openapi.yaml
@@ -1479,6 +1479,44 @@ paths:
                   $ref: '#/components/schemas/Person'
         '404':
           $ref: '#/components/responses/NotFound'
+  /entities/{entityId}/{elementType}/{operationType}/{elementId}:
+    put:
+      tags:
+        - 🧩 Entities
+      summary: Modifica relaciones de una entidad (añadir o eliminar products/persons/asociaciones)
+      parameters:
+        - name: entityId
+          in: path
+          required: true
+          schema:
+            type: integer
+        - name: elementType
+          in: path
+          required: true
+          schema:
+            type: string
+            enum: [ products, persons, asociaciones ]
+        - name: operationType
+          in: path
+          required: true
+          schema:
+            type: string
+            enum: [ add, rem ]
+        - name: elementId
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Relación modificada correctamente
+        '400':
+          description: Parámetros inválidos
+        '404':
+          description: Entidad o elemento no encontrado
+      security:
+        - MiWApiSecurity:
+            - writer
 
   /users:
     get:
